(i think) removed the akward gap in the dropdown menu from the nav bar that sometimes prevented it from working and also looked atrocious

--- a/style.css
+++ b/style.css
@@ -76,6 +76,7 @@ nav ul li a:hover{
     display:block;
     background-color: var(--navbarhover-color);
     box-shadow: 0px 16px 16px 0px rgba(0,0,0,0.2);
+    outline-color: white;
 }
 nav ul li ul{
     display: none;
@@ -84,6 +85,7 @@ nav ul li ul{
     padding: 5px;
     border-radius: 0px 0px 4px 4px;
     z-index: 1;
+    
 }
 nav ul li:hover ul{
     display: block;
